Backport src/test to Java 8