@@ -14,6 +14,7 @@ import static com.github.jaaa.util.Combinatorics.factorial;
 import static com.github.jaaa.util.Combinatorics.permutations;
 import static java.util.Arrays.asList;
 import static java.util.Collections.newSetFromMap;
+import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 
@@ -34,14 +35,14 @@ public class CombinatoricsTest
   }
 
   @Property void test_permutations_tryAdvance( @ForAll @IntRange(min=0, max=10) int n ) {
-    var spltr = permutations(n).spliterator();
-    var perms = new ArrayList<byte[]>( (int) factorial(n) );
-    Consumer<byte[]>               perms_add = perms::add;
-    do {} while ( spltr.tryAdvance(perms_add) );
+    Spliterator<byte[]> spltr = permutations(n).spliterator();
+    List<byte[]> perms = new ArrayList<>( (int) factorial(n) );
+    Consumer<byte[]>        perms_add = perms::add;
+    while( spltr.tryAdvance(perms_add) );
     test_permutations(n,perms);
   }
   @Property void test_permutations_forEachRemaining( @ForAll @IntRange(min=0, max=10) int n ) {
-    var perms = new ArrayList<byte[]>( (int) factorial(n) );
+    List<byte[]> perms = new ArrayList<>( (int) factorial(n) );
     permutations(n).spliterator().forEachRemaining(perms::add);
     test_permutations(n,perms);
   }
@@ -55,7 +56,7 @@ public class CombinatoricsTest
       {
         if( rng.nextDouble() < 1/3d )
         {
-          var left = rest.trySplit();
+          Spliterator<byte[]> left = rest.trySplit();
           if( left != null ) {
             if( rng.nextBoolean() ) {
               collect(left);
@@ -68,7 +69,7 @@ public class CombinatoricsTest
             return;
           }
         }
-        var        size = rest.estimateSize();
+        long       size = rest.estimateSize();
         assertThat(size).isBetween(0L, (long) Integer.MAX_VALUE);
         int nAdvance = rng.nextInt( (int) size );
         for( int i=0; i < nAdvance; i++ ) {
@@ -86,25 +87,25 @@ public class CombinatoricsTest
       }
     };
   }
-  @Property     void test_permutations         ( @ForAll @IntRange(min=0, max=10) int n ) { test_permutations( n, permutations(n)           .toList() ); }
-  @Property     void test_permutations_parallel( @ForAll @IntRange(min=0, max=10) int n ) { test_permutations( n, permutations(n).parallel().toList() ); }
+  @Property     void test_permutations         ( @ForAll @IntRange(min=0, max=10) int n ) { test_permutations( n, permutations(n)           .collect(toList()) ); }
+  @Property     void test_permutations_parallel( @ForAll @IntRange(min=0, max=10) int n ) { test_permutations( n, permutations(n).parallel().collect(toList()) ); }
   public static void test_permutations( int n, List<byte[]> permutations )
   {
     assertThat(n).isBetween(0, (int) Byte.MAX_VALUE);
     assertThat( permutations.size() ).isEqualTo( factorial(n) );
 
-    var idSet = newSetFromMap( new IdentityHashMap<>() );
-    var set = new HashSet<List<Byte>>();
+    Set<byte[]>   idSet = newSetFromMap( new IdentityHashMap<>() );
+    Set<List<Byte>> set = new HashSet<>();
 
-    var ref = new byte[n];
+    byte[] ref = new byte[n];
     for( byte i=0; ++i < n; )
       ref[i] = i;
 
-    for( var x: permutations ) {
+    for( byte[] x: permutations ) {
       assertThat(x.length).isEqualTo(n);
       assertThat( idSet.add(x) ).isTrue();
 
-      var y = asList(boxed(x));
+      List<Byte> y = asList(boxed(x));
       assertThat( set.add(y) ).isTrue();
 
       Arrays.sort(x);
